--- a/Authentication/templates/login.html
+++ b/Authentication/templates/login.html
@@ -12,15 +12,28 @@
                         </div>
                         <form method="post">
                             {% csrf_token %}
-                            <div class="mb-3"><input class="form-control" type="text" id="username" name="username" placeholder="Username"></div>
-                            <div class="mb-3"><input class="form-control" type="password" id="password" name="password" placeholder="Password"></div>
                             <div class="mb-3">
-                                <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox"><label class="form-check-label" for="checkbox">Remember me</label></div>
+                                <input class="form-control" type="text" id="username" name="username" placeholder="Username">
+                            </div>
+                            <div class="mb-3">
+                                <input class="form-control" type="password" id="password" name="password" placeholder="Password">
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="checkbox">
+                                    <label class="form-check-label" for="checkbox">Remember me</label>
+                                </div>
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-primary" type="submit">Log In</button>
                             </div>
                         </form>
+
+                        {% if print_output %}
+                        <div class="mt-3">
+                            <pre>{{ print_output }}</pre>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
