--- a/Authentication/templates/myAccount.html
+++ b/Authentication/templates/myAccount.html
@@ -42,9 +42,28 @@
             <a class="btn btn-secondary" href="{% url 'index:home' %}">Cancel</a>
         </form>
         <a class="btn btn-secondary" href="{% url 'recommendations:select_topics' %}">Edit Topic Choices</a>
-        <form method="post" action="{% url 'authentication:delete_preferences' %}">
-            {% csrf_token %}
-            <button class="btn btn-danger mt-3" type="submit">Delete Topic Preferences</button>
-        </form>
+        <button class="btn btn-danger mt-3" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">Delete Account</button>
+    </div>
+
+    <!-- Confirmation Modal -->
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmation</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete your account? This action cannot be undone.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <form method="post" action="{% url 'authentication:delete_account' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
